--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,8 @@ code {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.editForm span,
+.newNote span {
+  @apply text-red-700 text-xs;
+}
